# whisper-finetune-vertex-ai

./: .env.example  .gitignore  README.md  pyproject.toml  submit.py
src/trainer/: pipeline.py  task.py
